# my-life-as-a-dev

./: .env.example  .gitignore  .markdownlint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  doc-cli  doc-cli.sh  mkdocs.yml  requirements.txt  setup.py  versions.json
.github/: dependabot.yml
0.0.1/: 404.html  index.html  sitemap.xml
ai_food/: add_a_test_scene_profile.json  canvas_interactivity_profile.json  general_purpose_ai_agent.json  open_ai_page_profile.json
docs/: .nav.yml  ai-demo.md  docs-as-code.md  index.md  versions.json
latest/: 404.html  index.html  sitemap.xml
mkdocs_plugins/: __init__.py  ai_plugin.py
scripts/: Cargo.toml  bump-version.rs  bump-version.sh  doc-cli.rs  generate_repo_pages.py  serve-site.sh  startup.rs  startup.sh  sync_repo_docs.py  update_index_links.py  utils.py
scripts/src/: bump-version.rs  deploy-all-versions.rs  doc-cli.rs  startup.rs
v0.0.1/: 404.html  index.html  sitemap.xml
v0.0.2/: 404.html  index.html  sitemap.xml  versions.json
v0.0.3/: 404.html  index.html  sitemap.xml
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.5/: 404.html  index.html  sitemap.xml
v0.0.6/: 404.html  index.html  sitemap.xml
v0.0.7/: 404.html  index.html  sitemap.xml
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.10/: 404.html  index.html  sitemap.xml
v0.1.11/: 404.html  index.html  sitemap.xml
v0.1.12/: 404.html  index.html  sitemap.xml
v0.1.13/: 404.html  index.html  sitemap.xml
v0.1.14/: 404.html  index.html  sitemap.xml
v0.1.15/: 404.html  index.html  (+1 more)
(+1719 files in other folders)
