[package]
name = "doc-tools"
version = "0.1.0"
edition = "2021"
description = "Documentation maintenance tools for my-life-as-a-dev"

[[bin]]
name = "doc-cli"
path = "src/doc-cli.rs"

[[bin]]
name = "startup"
path = "src/startup.rs"

[[bin]]
name = "bump-version"
path = "src/bump-version.rs"

[[bin]]
name = "deploy-all-versions"
path = "src/deploy-all-versions.rs"